# netatmo-geopy

./: .flake8  .pre-commit-config.yaml  .readthedocs.yml  404.html  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  search.html  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
api/: index.html
authors/: index.html
contributing/: index.html
docs/: api.md  environment.yml  installation.md  references.bib  requirements.txt  usage.md
history/: index.html
installation/: index.html
netatmo_geopy/: __init__.py  auth.py  cli.py  core.py  settings.py  utils.py
search/: search_index.json
tests/: __init__.py  test_netatmo_geopy.py
tests/data/: response-00.json  response-01.json
usage/: index.html
